# coevent

./: BUILD  CMakeLists.txt  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-src  bazel-testlogs
.circleci/: config.yml
bazel/: cc_configure.bzl  cc_wrapper.py  coevent_build_system.bzl  libevent.BUILD
ci/: Dockerfile  do_ci.sh  run_coevent_docker.sh  setup_bazel.sh  setup_build_environment.sh
example/echo/: BUILD  client.cc  echo_test.sh  main.cc  server.cc
example/helloworld/: BUILD  main.cc
include/coevent/: BUILD  accept.h  accept_awaiter.h  detached_task.h  detached_task_promise.h  dispatcher.h  endpoint.h  event.h  io_context.h  read.h  read_awaiter.h  sleep.h  sleep_awaiter.h  socket.h  socket_state_awaiter.h  state.h  task.h  write.h  write_awaiter.h
src/: accept.cc  accept_awaiter.cc  detached_task.cc  detached_task_handle.cc  detached_task_handle.h  detached_task_promise.cc  endpoint.cc  event.cc  io_context.cc  read.cc  read_awaiter.cc  sleep_awaiter.cc  socket.cc  socket_state_awaiter.cc  state.cc  task.cc  write.cc  write_awaiter.cc
test/: BUILD  detached_task_test.cc  endpoint_test.cc  sleep_test.cc  task_test.cc
